# jsbsim-wasm

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: deploy-demo-pages.yml  update-jsbsim.yml
cmake/: CMakeLists.txt
demo/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
demo/public/scenario/hobby-rocket/: manifest.json
demo/public/scenario/hobby-rocket/aircraft/hobby_rocket/: hobby_rocket.xml  launchpad.xml
demo/public/scenario/hobby-rocket/scripts/: hobby_rocket_launch.xml
demo/src/: App.tsx  styles.css
release/: publish-metadata.json
scripts/: apply-jsbsim-patches.sh  build-wasm.sh  generate-fgfdmexec-bindings.mjs  prepare-jsbsim.sh  release.sh  resolve-jsbsim-release.mjs  sync-demo-scenario.mjs  sync-demo-wasm.sh  update-jsbsim.sh  write-publish-metadata.mjs
scripts/bindings-generator/: clang-ast.mjs  index.mjs  methods-from-ast.mjs  paths.mjs  render-cpp.mjs  render-jsbsim-api.mjs  render-ts.mjs  signature.mjs  type-metadata.mjs  type-utils.mjs
src/: index.ts  wasm.ts
src/sdk/: jsbsim-sdk.ts  load-module.ts  types.ts  vfs.ts
